[gd_scene load_steps=6 format=3 uid="uid://di7dk7ru8penn"]

[ext_resource type="Script" path="res://Enemies/Mothership/EnemyMothership.gd" id="1_kj2qt"]
[ext_resource type="Texture2D" uid="uid://xroriadou0ne" path="res://Enemies/Mothership/MothershipSprite.png" id="2_1mdap"]
[ext_resource type="PackedScene" uid="uid://cm5wfph8jbxdj" path="res://Stats/Stats.tscn" id="2_4la7o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1qs3o"]
size = Vector2(50, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4rax"]
size = Vector2(144, 144)

[node name="EnemyMothership" type="CharacterBody2D"]
script = ExtResource("1_kj2qt")
speed = 50
acceleration = 20
rotation_speed = 1.0
distance_for_attack = 320

[node name="Stats" parent="." instance=ExtResource("2_4la7o")]
max_health = 7

[node name="MainSprite" type="Sprite2D" parent="."]
scale = Vector2(1.5625, 1.5625)
texture = ExtResource("2_1mdap")

[node name="MainCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1qs3o")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="SpawnArea" type="Area2D" parent="."]
modulate = Color(1, 0.564706, 0.964706, 0.360784)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea"]
shape = SubResource("RectangleShape2D_f4rax")

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
